# Athan

./: .env.example  .gitignore  BUGS_FIXED.md  CHANGELOG.md  Dockerfile  LAVALINK_SETUP.md  PRIVACY_POLICY.md  PROJECT_STATUS.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  SETUP_GITHUB.md  START_HERE.md  TERMS_OF_SERVICE.md  docker-compose.yml  lavalink-config.yml  push_to_github.ps1  pyproject.toml  run.ps1  run.sh  start_lavalink.ps1  sync_commands.py
assets/: README.md
src/athan/: __init__.py  __main__.py  bot.py  commands.py  config.py  db.py  embeds.py  scheduler.py  utils.py  voice.py
src/athan/time_providers/: __init__.py  muslimsalat.py
tests/: __init__.py  test_config.py  test_db.py  test_integration.py  test_time_providers.py
